# i4-controller-firmware

./: Cargo.toml  Embed.toml  build.rs  memory.x  rust-toolchain.toml  xy_config.toml  zencan_config.toml
.cargo/: config.toml
docs/: i4.dbc
src/: adc.rs  current_control.rs  gpio.rs  main.rs  pwm.rs  step_timer.rs  stepper.rs  xydrive.rs
