[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = "1.1.2"
fdcan = { version = "0.2.0", features = ["fdcan_g0_g4_l5"] }
lilos = { path = "../lilos/os" }
panic-halt = "0.2.0"
#stm32g4 = { version = "0.15.1", features=["stm32g474"]}

stm32-metapac = { version = "15.0.0", features = ["stm32g474re"] }
