[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = "1.1.2"
crossbeam = { version = "0.8.4", default-features = false}
defmt = "0.3.6"
defmt-rtt = "0.4"
fdcan = { version = "0.2.0", features = ["fdcan_g0_g4_l5"] }
lilos = { path = "../lilos/os" }
panic-probe = { version = "*", features = ["print-defmt"] }
static_cell = "2.1"
#stm32g4 = { version = "0.15.1", features=["stm32g474"]}

stm32-metapac = { version = "15.0.0", features = ["stm32g474re", "rt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-