[package]
name = "i4-controller"
version = "0.1.0"
edition = "2024"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = "1.1.2"
crossbeam = { version = "0.8.4", default-features = false}
defmt = "1.0.0"
fdcan = { version = "0.2.0", features = ["fdcan_g0_g4_l5"] }
grounded = "0.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
lilos = "1.3.0"
md5 = { version = "0.7.0", default-features = false }
panic-probe = { version = "*", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1" }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1"
stm32-metapac = { version = "15.0.0", features = ["stm32g474re", "rt"] }
zencan-node = { path = "../zencan/zencan/zencan-node", default-features = false, features = ["defmt"]}

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[build-dependencies]
#zencan-build = { git = "https://github.com/mcbridejc/zencan" }
zencan-build = { path = "../zencan/zencan/zencan-build" }
